GNOME Bugzilla – Bug 699565
dmabuf: fix memory initialization
Last modified: 2013-05-03 11:11:45 UTC
Created attachment 243161 [details] [review] patch Without this the shared memory is broken
commit a4ba85b151429a73509c1c8852262eb6ed0c1aee Author: Michael Olbrich <m.olbrich@pengutronix.de> Date: Fri May 3 11:12:04 2013 +0200 dmabuf: fix memory initialization Without this the shared memory is broken https://bugzilla.gnome.org/show_bug.cgi?id=699565