dmabuf: fix memory initialization

Without this the shared memory is broken

https://bugzilla.gnome.org/show_bug.cgi?id=699565